fixed various pages in desktop with narrow viewport width
Choose library - when screen size changes- looks wrong (bug 1928)

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Home.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Home.css
@@ -672,4 +672,18 @@ footer {
     /*rtl*/
   }
 }
+@media (max-width: 1024px) {
+  .logo {
+    margin-left: 20px;
+    /*rtl*/
+  }
+  .headingTexts {
+    padding-left: 20px;
+    /*rtl*/
+  }
+  .videoWpr {
+    left: 20px;
+    /*rtl*/
+  }
+}
 /*#endregion */
