--- a/Zbang.Cloudents.Mvc4WebRole/Content/HomeRtl.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/HomeRtl.less
@@ -168,17 +168,23 @@ footer
 /*#region media queries */
 
 @media (max-width: 1430px) {
-    //.headerActions
-    //{
-        //left: ~'calc(50% - 512px)'; /*rtl*/
-        //right: auto;
-    //}
     .headerWpr.menuOpen .headerActions
     {
         left: 200px; /*rtl*/
         right: auto;
     }
 }
-
+@media (max-width: 1024px) {
+    .logo {
+        margin: 20px 20px 0 0; /*rtl*/
+    }
+    .headingTexts {
+        padding: 0 20px 0 0; /*rtl*/
+    }
+    .videoWpr {
+        right: 20px; /*rtl*/
+        left: auto;
+    }
+}
 
 /*#endregion */
