--- a/Zbang.Cloudents.Mvc4WebRole/Content/RTL3.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/RTL3.less
@@ -1451,9 +1451,10 @@
     }
 
 .settingsContent {
-    right: 288px; /*rtl*/
-    left: auto;
+    //right: 288px; /*rtl*/
+    //left: auto;
     text-align: right; /*rtl*/
+    margin: 30px 288px 0 20px; /*rtl*/
 }
 /*#region profile info */
 .profileInfo {
